<resources>
    <string name="app_name">Bulk Deliveries</string>
  <string name="toast_bt_na">bluetooth is not available</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth print.</string>
    <string name="connect_fail">Unable to connect device</string>
    <string name="connect_lost">Device connection was lost</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices....</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="warn_timeout">Connection is not available.\nData sending is cancelled.</string>

    <string name="sample_print">Receipt Printing</string>
    <string name="receipt">Print Receipt</string>
    <string name="image">Image</string>
    <string name="text_print">ASCII Text Printing</string>
    <string name="edit_text">Enter sample text</string>
    <string name="print">Print</string>
    <string name="emphasis">Emphasis</string>
    <string name="underline">Underline</string>
    <string name="charsize">Character Size</string>
    <string name="justification">Justification</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="sample_barcode">Sample Barcode Printing</string>
    <string name="barcode_1d">1D barcodes</string>
    <string name="barcode_2d">2D barcodes</string>
    <string name="barcode_gs1">GS1 databars</string>
    <string name="msr_mode_setting">MSR Mode Setting</string>
    <string name="track23">2 Track Mode</string>
    <string name="track123">3 Track Mode</string>
    <string name="msr_cancel">Cancel MSR Mode</string>
    <string name="msr_clear">Clear Track Info</string>
    <string name="msr_1track">1st Track</string>
    <string name="msr_2track">2nd Track</string>
    <string name="msr_3track">3rd Track</string>
</resources>

